# OTUSCppCourseWork

./: .travis.yml  CMakeLists.txt  README.md  calc_task_mgr.cpp  calc_task_mgr.h  main.cpp  object_pool.h  presentation.md  project_config.h  response_calculator.cpp  response_calculator.h  result_saver.cpp  result_saver.h  task_generator.cpp  task_generator.h  task_generator_interface.h  test_course.cpp  thread_pool.h
